- FIX: Some look and feels need to repaint progress bar when showing / hiding ticks
- FIX: Navigator width is not restored after restarting app and execute action to show navigator
- FIX: Icon not displayed when installed from .deb package [3138941]
- FIX: Make window bigger if when showing a component there is not enough space

aTunes 2.0.1
-------------
- FIX: Some Substance L&F skins were not working
- FIX: Can't sort or shuffle a new created playlist
- FIX: Too many CRs in lyrics [2991316]
- FIX: Problems with accuracy of progress bar [2989229]
- FIX: Write repository after reading XML [2991957]
- FIX: Avoid progress bar move when time labels needs extra space
- FIX: Don't show "Buffering" message for downloaded podcast feed entries
- FIX: Shown wrong incomplete tags with System LAF [2992481][3008889]
- FIX: Some components where not updated when changing look and feel
- FIX: Application not able to play in Linux using a desktop different from Gnome or KDE [2995302]
- FIX: Preferences not saved if some requires restart [2999531]
- FIX: Avoid incomplete lyrics from some engines
- FIX: ID3v1.1 tags not read if not valid ID3v2.3 tag present (Jaudiotagger problem) [2997621]
- FIX: Import loved tracks from last.fm enabled even if last.fm disabled
- FIX: Load UNC resources from an M3U file [2988771]
- FIX: Interface freeze when caching files before play [2998158]
- FIX: Wrong foreground color in navigation table
- FIX: Improvements in plugin installation
- FIX: Can't add UI controls from plugins
- FIX: Improvements in plugins panel
- FIX: Improvements in repository read speed
- FIX: libnotify doesn't work after a call to uninit method
- FIX: Context panel updates are blocking playback
- UI improvements in repository selection dialog


aTunes 2.0.0
-------------
- Support for libnotify (Gnome) (Patch by Marco Biscaro)
- File chooser in tag dialog should open in directory of the audio file (feature request [2786730])